--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <script src="node_modules/rxjs/bundles/Rx.js"></script>
     <script src="node_modules/angular2/bundles/angular2.dev.js"></script>
 
+    <link rel="stylesheet" href="app.css">
+
     <!-- Configure SystemJS -->
     <script>
         System.config({
@@ -33,4 +35,6 @@
     <my-app>Loading...</my-app>
 </div>
 </body>
+
+<!--<script src="app.css"></script>-->
 </html>
